--- a/assets/main.css
+++ b/assets/main.css
@@ -46,7 +46,8 @@ table {
   border-spacing: 0; }
 
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  -webkit-user-select: none; }
 
 body {
   font: 12px/1.2 Helvetica, Arial, sans-serif; }
@@ -96,6 +97,18 @@ body {
     .ob-workspace-manager > .status-bar > .workspace-list {
       float: left; }
       .ob-workspace-manager > .status-bar > .workspace-list .button {
-        margin-right: 5px; }
+        margin-right: 5px;
+        width: 20px;
+        background: black; }
+        .ob-workspace-manager > .status-bar > .workspace-list .button.active {
+          background: white;
+          color: black; }
     .ob-workspace-manager > .status-bar > .accessories {
       float: right; }
+
+.ob-workspace {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
