--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,6 +6,7 @@ $status_bar_font_size	: 12px ;
 
 * {
 	box-sizing: border-box;
+	-webkit-user-select: none;
 }
 
 body {
@@ -66,6 +67,12 @@ body {
 			float: left;
 			.button {
 				margin-right: $button_spacing;
+				width: $status_bar_height;
+				background: black;
+				&.active {
+					background: white;
+					color: black;
+				}	
 			}
 		}
 
@@ -73,4 +80,12 @@ body {
 			float: right;
 		}
 	}
+}
+
+.ob-workspace {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
