--- a/assets/main.css
+++ b/assets/main.css
@@ -112,3 +112,21 @@ body {
   left: 0;
   width: 100%;
   height: 100%; }
+  .ob-workspace > .ob-task {
+    position: absolute; }
+  .ob-workspace > .split-pane-divider {
+    position: absolute;
+    background-color: black; }
+  .ob-workspace > .hk-split-pane-ghost {
+    background-color: #ff3300;
+    opacity: 0.7; }
+  .ob-workspace.horizontal > .split-pane-divider {
+    left: 0;
+    right: 0;
+    height: 8px;
+    cursor: row-resize; }
+  .ob-workspace.vertical > .split-pane-divider {
+    top: 0;
+    bottom: 0;
+    width: 8px;
+    cursor: col-resize; }
