--- a/assets/main.scss
+++ b/assets/main.scss
@@ -88,4 +88,30 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
+
+	> .ob-task {
+		position: absolute;
+	}
+
+	> .split-pane-divider {
+		position: absolute;
+		background-color: black;
+	}
+
+	> .hk-split-pane-ghost {
+		background-color: #ff3300;
+		opacity: 0.7;
+	}
+
+	&.horizontal > .split-pane-divider {
+		left: 0; right: 0;
+		height: 8px;
+		cursor: row-resize;
+	}
+
+	&.vertical > .split-pane-divider {
+		top: 0; bottom: 0;
+		width: 8px;
+		cursor: col-resize;
+	}
 }
